# DEEP-OC-underwater-noise-classification

./: .gitignore  .gitignore copy  Dockerfile  Dockerfile copy  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  ai4-metadata.yml  captioning.ipynb  config.yaml  docker-compose.yml  metadata copy.json  metadata.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.Trash-0/files/: Untitled1.ipynb  clap_test.py  dataset.py  noteboks-Copy1.ipynb  noteboks.ipynb  untitled.txt
.Trash-0/info/: Untitled.ipynb.trashinfo  Untitled1.ipynb.trashinfo  clap_test.py.trashinfo  clap_trainer.py.trashinfo  create_embeddings.py.trashinfo  dataset.py.trashinfo  filterbank.py.trashinfo  noteboks-Copy1.ipynb.trashinfo  noteboks.ipynb.trashinfo  splitting_data.py.trashinfo  untitled.txt.trashinfo
.ipynb_checkpoints/: req-checkpoint.txt
.sqa/: config.yml  docker-compose.yml
1_Data_Processing/: split.py  splitting_data.ipynb  splitting_data.py
1_Data_Processing/.ipynb_checkpoints/: splitting_data-checkpoint.ipynb
1_Data_Split/: splitting_data.py
1_Data_Split/.ipynb_checkpoints/: split-checkpoint.py
2_1_Data/: classes.txt  test.txt  train.txt  val.txt
2_2_Model/: clap_trainer.py  dataset.py  models.py  utils.py
2_2_Model/.ipynb_checkpoints/: clap_trainer-checkpoint.py  dataset-checkpoint.py  dataset-old-checkpoint.py  filterbank-checkpoint.py  models-checkpoint.py  utils-checkpoint.py
3_1_Results/2024-12-24_12-39-57_1_0_0_0_1.4_0.5/: predicted_true_values_2024-12-24_12-39-57_1_0_0_0_1.4_0.5_results.csv
3_1_Results/2025-02-14_14-44_1_0_0_0_-1.9_0.5/: predicted_true_values_2025-02-14_14-44-23_1_0_0_0_-1.9_0.5_results.csv
3_2_Check_Performance/: performance_checker-normal_paper-A-5.ipynb  performance_checker-normal_paper-A10.ipynb  performance_checker-normal_paper_A5_B0.5.ipynb
3_2_Check_Performance/.ipynb_checkpoints/: performance_checker-normal_paper-A-5-checkpoint.ipynb  performance_checker-normal_paper-checkpoint.ipynb
3_3_figures/: Plot_two_graphs.ipynb  Untitled.ipynb  costum_function.py  costum_function_a_b copy 2.py  costum_function_a_b copy 3.py  costum_function_a_b copy.py  costum_function_a_b.py  evolution_plotter.ipynb  excluded.py  figure_plotter copy.ipynb  figure_plotter.ipynb  map_maker.py  similarity_matrix.py  splot_again.py  spotlight.py  timelin_split.py  timeline.py
3_3_figures/.ipynb_checkpoints/: Plot_two_graphs-checkpoint.ipynb  figure_plotter-checkpoint.ipynb
3_3_figures/extra/: excluded.py  gif_maker.py
3_3_figures/figures_paper/: best_costum.py  costum_function_choices.py  import os.py  map_maker.py  similarity_matrix.py  timeline_split_bigger.py
4_Export/: merger.ipynb
audio-vessel-classifier/: api.py  config.py
audio_vessel_classifier/: api.py  config.py  create_embeddings.py  misc.py  models.py  utils.py
audio_vessel_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bandit/: index.html
etc/: config.yaml
tests/: test_api.py
