[metadata]
name = planktonclas
summary = Identify the species level of Plankton for 95 classes. Working on OSCAR
author = Ignacio Heredia (CSIC), Wout Decrop (VLIZ)
author-email = iheredia@ifca.unican.es, wout.decrop@vliz.be
version = 0.1.0
license = Apache 2.0
home-page = https://github.com/ai4os-hub/phyto-plankton-classification
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    planktonclas

[entry_points]
deepaas.v2.model =
    planktonclas = planktonclas.api
